--- a/app/styles/helpers/optimize.styl
+++ b/app/styles/helpers/optimize.styl
@@ -69,6 +69,8 @@ body
 	line-height 1
 	-moz-osx-font-smoothing grayscale
 	-webkit-font-smoothing antialiased
+	color c_black
+	overflow-x hidden
 
 // Links
 // ==========================================================================
