--- a/app/blocks/subtitle/subtitle.styl
+++ b/app/blocks/subtitle/subtitle.styl
@@ -1,2 +1,8 @@
 .subtitle
+	margin-x(auto)
 	display block
+	max-width 900px
+	font-family reg
+	font-size 18px
+	line-height 28px
+	text-align center
