--- a/app/blocks/window/window.styl
+++ b/app/blocks/window/window.styl
@@ -1,2 +1,10 @@
 .window
+	margin-x(auto)
+	padding 20px
 	display block
+	width 1400px
+	background-color #fff
+	box-shadow 0 0 30px #aaa
+	+below(1440px)
+		margin-x(20px)
+		width calc(100% - 40px)
