--- a/app/blocks/about/about.jade
+++ b/app/blocks/about/about.jade
@@ -2,7 +2,7 @@ include ../container/container
 include ../title/title
 
 mixin about()
-	+b('section').about
+	+b('section').about#about
 		+container()
 			+title('Что вас ждет')
 			+e.body
