--- a/app/blocks/header/header.styl
+++ b/app/blocks/header/header.styl
@@ -7,6 +7,10 @@
 		font-size 108.85px
 		text-transform uppercase
 		color #5d381c
+		+below(992px)
+			text-shadow 0 0 10px #fff
+		+below(600px)
+			font-size 60px
 		img
 			margin-right 20px
 	&__subtitle
@@ -16,6 +20,10 @@
 		font-family semi
 		font-size 26px
 		line-height 32px
+		+below(992px)
+			text-shadow 0 0 10px #fff
+		+below(600px)
+			font-size 18px
 	.yellow-btn
 		margin-top 50px
 		margin-left 5px
