--- a/app/blocks/menu/menu.jade
+++ b/app/blocks/menu/menu.jade
@@ -4,7 +4,7 @@ include ../subtitle/subtitle
 include ../yellow-btn/yellow-btn
 
 mixin menu()
-	+b('section').menu
+	+b('section').menu#menu
 		+container()
 			+title('Наше меню')
 			+subtitle('Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ')
