--- a/app/blocks/page/page.styl
+++ b/app/blocks/page/page.styl
@@ -1,2 +1,5 @@
 .page
+  overflow-x hidden
   background url(../images/header-bg-desktop.png) no-repeat 45% 0 #f6f6f6
+  +below(992px)
+    background url(../images/header-bg-mob.png) no-repeat 50% 0 #f6f6f6
