--- a/app/blocks/contacts/contacts.styl
+++ b/app/blocks/contacts/contacts.styl
@@ -1,2 +1,38 @@
 .contacts
+	position relative
+	margin-top 150px
 	display block
+	.window
+		position relative
+		z-index 3
+		padding 20px
+	.title
+		margin-top 20px
+		margin-bottom 25px
+	&__list
+		margin-top 38px
+		margin-bottom 20px
+		display flex
+		justify-content space-around
+		+below(600px)
+			flex-direction column
+			align-items center
+	&__item
+		font-family xbold
+		font-size 18px
+		+below(600px)
+			margin-bottom 10px
+	&__map
+		position relative
+		z-index 2
+		margin-top -165px
+		width 100%
+		height 485px
+	&__round
+		position absolute
+		top -80px
+		left -100px
+		+below(1200px)
+			left -300px
+		+below(660px)
+			display none
