--- a/app/blocks/container/container.styl
+++ b/app/blocks/container/container.styl
@@ -2,11 +2,11 @@
 	position relative
 	margin-x(auto)
 	padding-x(10px)
-	width 1170px
+	max-width 1170px
 	+below(1200px)
-		width 990px
+		max-width 990px
 	+below(992px)
-		width 766px
+		max-width 766px
 	+below(766px)
 		width 100%
 
