--- a/app/blocks/title/title.styl
+++ b/app/blocks/title/title.styl
@@ -7,6 +7,11 @@
 		width 70px
 		height 28px
 		object-fit cover
+		+below(600px)
+			margin-right 10px
+			transform scale(.7)
 	&__text
 		font-family semi
 		font-size 42px
+		+below(600px)
+			font-size 30px
