--- a/app/blocks/header/header.styl
+++ b/app/blocks/header/header.styl
@@ -13,6 +13,8 @@
 			font-size 60px
 		img
 			margin-right 20px
+			+below(600px)
+				height 50px
 	&__subtitle
 		margin-top 20px
 		padding-left 9px
