--- a/app/blocks/contacts/contacts.styl
+++ b/app/blocks/contacts/contacts.styl
@@ -2,6 +2,8 @@
 	position relative
 	margin-top 150px
 	display block
+	+below(600px)
+		margin-top 40px
 	.window
 		position relative
 		z-index 3
