--- a/app/blocks/gallery/gallery.styl
+++ b/app/blocks/gallery/gallery.styl
@@ -35,6 +35,7 @@
 		+below(600px)
 			grid-template-columns 1fr
 			grid-template-rows 150px 150px 150px
+			grid-gap 10px
 	&__item
 		overflow hidden
 		+below(600px)
